# OpcUaPiXtendServer

./: .gitignore  Dockerfile  Jenkinsfile  README.md  README.rst  build.sh  start.bat
docs/source/: conf.py  glossary.rst  index.rst
docs/source/1_getting_started/: installation.rst  overview.rst
src/: CMakeLists.txt
src/OpcUaPiXtendServer/: CMakeLists.txt
src/OpcUaPiXtendServer/Config/: Opc.Ua.NodeSet.Object.xml  Opc.Ua.NodeSet.PiXtend.xml  OpcUaPiXtendServer.xml  OpcUaServer.xml
src/OpcUaPiXtendServer/Factory/: PiXtendModulesFactory.cpp  PiXtendModulesFactory.h
src/OpcUaPiXtendServer/ModuleDummy/: PiXtendEIOAODummy.cpp  PiXtendEIOAODummy.h  PiXtendEIODODummy.cpp  PiXtendV2LDummy.cpp  PiXtendV2LDummy.h  PiXtendV2SDummy.cpp  PiXtendV2SDummy.h
src/OpcUaPiXtendServer/ModuleEIO/: DeviceAccess.cpp  DeviceAccess.h  DeviceAccessManager.cpp  DeviceAccessManager.h  PiXtendEIOAOInst.cpp  PiXtendEIOAOInst.h  PiXtendEIODOInst.cpp  PiXtendEIODOInst.h  PiXtendEIODOUSBInst.cpp  PiXtendEIODOUSBInst.h  USBAccess.cpp  USBAccess.h
src/OpcUaPiXtendServer/ModuleSpi/: PiXtendHardwareAccessSpi.h  PiXtendSpiHelper.cpp  PiXtendV2LInst.cpp  PiXtendV2LInst.h  PiXtendV2SInst.cpp  PiXtendV2SInst.h
src/OpcUaPiXtendServer/ModuleUSB/: PiXtendEIODOUSBInst.cpp  PiXtendEIODOUSBInst.h  USBAccess.cpp  USBAccess.h
src/OpcUaPiXtendServer/ObjectServer/: ObjectApp.cpp  ObjectApp.h  ObjectServer.cpp  ObjectServer.h  ObjectsCfg.cpp  ObjectsCfg.h
src/OpcUaPiXtendServer/OpcUaServer/: NodeContext.cpp  NodeContext.h  NodeContextAnalogIO.cpp  NodeContextAnalogIO.h  NodeContextAnalogValueConverter.cpp  NodeContextAnalogValueConverter.h  NodeContextDigitalIO.cpp  NodeContextDigitalIO.h  PiXtendBaseServer.cpp  PiXtendBaseServer.h  PiXtendEIOAOServer.cpp  PiXtendEIOAOServer.h  PiXtendEIODOServer.cpp  PiXtendEIODOServer.h  PiXtendServerControllerCfg.cpp  PiXtendServerControllerCfg.h  PiXtendV2LServer.cpp  PiXtendV2LServer.h  PiXtendV2SServer.cpp  PiXtendV2SServer.h  UnitConverterContext.cpp  UnitConverterContext.h
src/OpcUaPiXtendServer/PiXtend/: ContextIndex.cpp  ContextIndex.h  PiXtendAnalogValueContext.cpp  PiXtendAnalogValueContext.h  PiXtendBase.cpp  PiXtendBase.h  PiXtendByteValueContext.cpp  PiXtendByteValueContext.h  PiXtendDigitalValueContext.cpp  PiXtendDigitalValueContext.h  PiXtendEIOAO.cpp  PiXtendEIOAO.h  PiXtendEIOAODummy.cpp  PiXtendEIOAODummy.h  PiXtendEIOAOInst.cpp  PiXtendEIOAOInst.h  PiXtendEIODO.cpp  PiXtendEIODO.h  PiXtendEIODODummy.cpp  PiXtendEIODODummy.h  PiXtendEIODOInst.cpp  PiXtendEIODOInst.h  PiXtendModules.cpp  PiXtendModules.h  PiXtendModulesFactory.cpp  PiXtendModulesFactory.h  PiXtendSpiHelper.cpp  PiXtendSpiHelper.h  PiXtendV2L.cpp  PiXtendV2L.h  PiXtendV2LDummy.cpp  PiXtendV2LDummy.h  PiXtendV2LInst.cpp  PiXtendV2LInst.h  PiXtendV2S.cpp  PiXtendV2S.h  PiXtendV2SDummy.cpp  PiXtendV2SDummy.h  PiXtendV2SInst.cpp  PiXtendV2SInst.h  (+5 more)
src/OpcUaPiXtendServer/PiXtend/HardwareAccessSpi/: PiXtendEIOAOInst.cpp  PiXtendEIOAOInst.h  PiXtendEIODOInst.cpp  PiXtendEIODOInst.h  PiXtendSpiHelper.cpp  PiXtendSpiHelper.h  PiXtendV2LInst.cpp  PiXtendV2LInst.h  PiXtendV2SInst.cpp  PiXtendV2SInst.h
src/OpcUaPiXtendServer/Tools/: PiXtendToolConfig.cpp  PiXtendToolConfig.h  PiXtendToolModule.cpp  PiXtendToolModule.h  PiXtendToolModuleEIOAO.cpp  PiXtendToolModuleEIOAO.h  PiXtendToolModuleEIODO.cpp  PiXtendToolModuleEIODO.h  PiXtendToolModuleV2L.cpp  PiXtendToolModuleV2L.h  PiXtendToolModuleV2S.cpp  PiXtendToolModuleV2S.h  pixtend.cpp
src/OpcUaPiXtendServer/linux/etc/init/: OpcUaPiXtendServer.conf.in
src/OpcUaPiXtendServer/linux/etc/init.d/: OpcUaPiXtendServer.in
src/OpcUaPiXtendServer/linux/script/: postinst  prerm
src/OpcUaPiXtendServer/linux/usr/lib/systemd/system/: OpcUaPiXtendServer.service.in
